LastFmServiceConfig: allow going from pwd stored in ASCII to pwd stored in KWallet

...by entering empty username and password.

BUGFIXES:
 * Prevent inability to save Last.fm password in corner cases.

BUG: 315306
FIXED-IN: 2.8